--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>11th Datesheet 2025</title>
+    <title>11th Datesheet</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,60 +20,71 @@
 </head>
 
 <body class="flex flex-col justify-center items-center min-h-screen">
-    <div class="text-center p-5">
-        <h1 class="text-3xl font-bold">11th Datesheet 2025</h1>
+    <div class="text-center p-10">
+        <h1 class="sm:text-3xl text-2xl font-bold">11th Datesheet 2025</h1>
     </div>
     <div class="overflow-x-auto rounded-box border border-base-content/5">
-        <table class="table table-zebra text-xl">
-            <!-- head -->
+        <table class="table table-zebra sm:text-xl">
             <thead>
                 <tr>
                     <th>Date</th>
+                    <th>Day</th>
                     <th>Name</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>30 April</td>
+                    <td>Wednesday</td>
                     <td>Chemistry</td>
                 </tr>
                 <tr>
                     <td>9 May</td>
+                    <td>Friday</td>
                     <td>Physics</td>
                 </tr>
                 <tr>
                     <td>13 May</td>
+                    <td>Tuesday</td>
                     <td>Urdu</td>
                 </tr>
                 <tr>
                     <td>16 May</td>
+                    <td>Friday</td>
                     <td>Computer</td>
                 </tr>
                 <tr>
                     <td>19 May</td>
+                    <td>Monday</td>
                     <td>Biology</td>
                 </tr>
                 <tr>
                     <td>21 May</td>
+                    <td>Wednesday</td>
                     <td>Mathematics</td>
                 </tr>
                 <tr>
                     <td>24 May</td>
+                    <td>Saturday</td>
                     <td>English</td>
                 </tr>
                 <tr>
                     <td>27 May</td>
+                    <td>Tuesday</td>
                     <td>Statistics</td>
                 </tr>
                 <tr>
                     <td>28 May</td>
+                    <td>Wednesday</td>
                     <td>Islamiyat</td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div class="text-center p-10">
-        <p class="font-bold">Made by <a href="https://github.com/nabeelv7" target="_blank" class="text-blue-500 hover:text-blue-600 transition-colors duration-300 hover:underline cursor-pointer">Nabeel</a></p>
+        <p class="font-bold">Made by <a href="https://github.com/nabeelv7" target="_blank"
+                class="text-blue-500 hover:text-blue-600 transition-colors duration-300 hover:underline cursor-pointer">Nabeel</a>
+        </p>
     </div>
 </body>
 
